[#16346] Containerize all server tests
* Create dedicated container networks for tests
* Support network aliases
* Refactor certificate generation to a separate class
* Remove EMBEDDED mode